--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "antd": "^3.20.5",
     "axios": "^0.19.0",
+    "babel-plugin-import": "^1.12.0",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
