--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "slugify": "^1.3.4"
   }
 }
