--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.0",
     "classnames": "^2.2.6",
+    "google-map-react": "^1.1.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
