--- a/package.json
+++ b/package.json
@@ -49,18 +49,18 @@
     "babel-plugin-import": "^1.12.0",
     "classnames": "^2.2.6",
     "dotenv": "^8.0.0",
+    "google-map-react": "^1.1.4",
+    "google-maps-react": "^2.0.2",
     "history": "^4.9.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
-    "google-map-react": "^1.1.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "redux": "^4.0.1",
     "slugify": "^1.3.4"
-    "react-scripts": "^3.0.1",
-    "redux": "^4.0.1"
   }
 }
