--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
     "redux": "^4.0.1",
-    "slugify": "^1.3.4"
+    "slugify": "^1.3.4",
+    "styled-components": "^4.3.2"
   }
 }
