--- a/AperoClockBack/.gitignore
+++ b/AperoClockBack/.gitignore
@@ -18,5 +18,5 @@
 ###< symfony/web-server-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
-/config/jwt/*.pem
+# /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
