--- a/AperoClockBack/config/packages/security.yaml
+++ b/AperoClockBack/config/packages/security.yaml
@@ -25,7 +25,7 @@ security:
         api:
             pattern: ^/api
             stateless: true
-            anonymous: true
+            anonymous: false
             provider: entity_provider
             guard:
                 authenticators:
@@ -42,6 +42,6 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/api/login,  roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api,        roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api,        roles: IS_AUTHENTICATED_FULLY }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
